# aimharder-book-bot

./: .headers.tmpl  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml
aimharder_book_bot/: __init__.py  __main__.py  book.py  cli.py  config.yml  main.py  utils.py
